# tldpy

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: codspeed.yml
tests/: test_benchmarks.py
tldpy/: manage.py
tldpy/tldp/: apps.py  asgi.py  logging.py  settings.py  urls.py  views.py  wsgi.py
tldpy/tldp/management/commands/: index_to_meili.py
tldpy/tldp/templates/tldp/: base.html
